--- a/style.css
+++ b/style.css
@@ -1,5 +1,111 @@
+html{
+    height: 100%;
+}
 body{
     background-color: #313131;
     color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif§;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    margin: 0%;
+    height: 100%;
+}
+
+nav .logo{
+    background-color:white;
+    display: flex;
+    width: 30%;
+    height: auto;
+    border-radius: 50%;
+    padding: 10px;
+}
+nav{
+    margin-right: 10px;
+    padding: 10px;
+    width: 15%;
+    background-color: #272727;
+    flex-direction: row;
+    height: 100%;
+    
+}
+nav link{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+nav a{
+    color: inherit;
+    margin: 10px;
+    font-size: 1em;
+}
+nav h2{
+    font-size: 2em;
+    margin-left: 10px;
+}
+nav ul{
+    padding-left: 0%;
+}
+nav li{
+    list-style-type: none;
+    margin-bottom: 10px;
+    margin-right: 30px;
+    
+}
+nav a:hover {
+    color: #50ff50;
+}
+
+.content{
+    padding: 10px;
+    flex-wrap: wrap;
+    align-content: space-between;
+    display: flex;
+}
+
+.donnee{
+    background-color: #424242;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+}
+.donnee h2{
+    margin: 5px;
+    font-size: 1.5em;
+}
+.donnee p{
+    font-size: 3em;
+    margin: 10px;
+    padding: 8px;
+    background-color: #7a7a7a;
+    border-radius: 10px;
+    text-align: center;
+}
+#graf_pluie{
+    width: 500px;
+    height: 200px;
+    font-size: 50px;
+    margin: 10px;
+    padding: 8px;
+    background-color: #7a7a7a;
+    border-radius: 10px;
+}
+
+@media screen and (max-width:1000px){
+    body{
+        flex-direction: column;
+    }
+    nav{
+        width:100%;
+        text-align: center;
+        align-content: center;
+    }
+    nav .logo{
+    background-color:white;
+    display: flex;
+    width: 10%;
+    height: auto;
+    border-radius: 50%;
+    padding: 10px;
+    }
+    
 }
