Add navigation links to 'Accueil' and improve styling for better user experience

--- a/style.css
+++ b/style.css
@@ -36,10 +36,16 @@ nav link {
 
 }
 
-nav a {
+nav li a {
     color: inherit;
     margin: 10px;
     font-size: 1em;
+    text-decoration: underline;
+}
+
+nav a{
+    color: inherit;
+    text-decoration: none;
 }
 
 nav h2 {
@@ -58,8 +64,8 @@ nav li {
 
 }
 
-nav a:hover {
-    color: #50ff50;
+nav li a:hover {
+    font-weight:bold;
 }
 
 .content {
@@ -110,6 +116,7 @@ nav a:hover {
         width: 100%;
         text-align: center;
         align-content: center;
+        height: auto;
     }
 
     nav .logo {
@@ -119,6 +126,7 @@ nav a:hover {
         height: auto;
         border-radius: 50%;
         padding: 10px;
+        justify-self: center;
     }
     .graf{
         width: auto;
@@ -149,6 +157,10 @@ nav a:hover {
     padding: 10px 12px;
     border-bottom: 1px solid #424242;
     text-align: center;
+}
+
+thead{
+    border-bottom: 3px solid #313131;
 }
 
 .history-table th {
