--- a/templates/a_propos.html
+++ b/templates/a_propos.html
@@ -2,27 +2,25 @@
 <html lang="fr">
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <title>Dashboard</title>
+    <title>Station météo -  à propos</title>
 </head>
 
 <body>
     <!--side bar-->
     <nav>
-        <img src="meteoswiss-svgrepo-com.png" alt="icone" id="logo" class="logo">
+        <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <a href="index.html"><h2>Accueil</h2></a>
+            <a href=""><h2>Accueil</h2></a>
             <hr>
             <ul>
-                <li><a href="index.html">Données</a></li>
-                <li><a href="a_propos.html">À propos</a></li>
-                <li><a href="statistique.html">Statistique</a></li>
-                <li><a href="historique.html">Historique</a></li>
+                <li><a href="">Données</a></li>
+                <li><a href="a_propos">À propos</a></li>
+                <li><a href="statistique">Statistique</a></li>
+                <li><a href="historique">Historique</a></li>
             </ul>
             <hr>
             <ul>
