correction d'un bug mineur qui empèche les données de s'actualiser

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,10 @@
         updateTemps();
 
         // Met à jour toutes les 10 secondes
-        setInterval((updateTemperature,updatePression,updateHumidite,updateTemps), 10000);
+        setInterval((updateTemperature), 10000);
+        setInterval((updatePression), 10000);
+        setInterval((updateHumidite), 10000);
+        setInterval((updateTemps), 10000);
     </script>
 
 </body>
