Ajout de l'historique et séparation des fichiers JS

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,4 @@
 html {
-    height: 100%;
     min-height: 100%;
 }
 
@@ -9,7 +8,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     margin: 0%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 nav .logo {
@@ -27,8 +26,8 @@ nav {
     width: 15%;
     background-color: #272727;
     flex-direction: row;
-    height: 100%;
-
+    min-height: calc(100vh - 20px);
+    border-radius: 0px 10px 10px 0px;
 }
 
 nav link {
@@ -147,14 +146,14 @@ canvas {
     overflow-x: auto;
 }
 
-.history-table {
+#history-table {
     width: 100%;
     border-collapse: collapse;
     min-width: 600px;
 }
 
-.history-table th,
-.history-table td {
+#history-table th,
+#history-table td {
     padding: 10px 12px;
     border-bottom: 1px solid #424242;
     text-align: center;
@@ -185,6 +184,7 @@ thead{
     background-color: #505050;
     border-radius: 10px;
 }
+ 
 
 .card h2 {
     margin: 5px;
