--- a/templates/a_propos.html
+++ b/templates/a_propos.html
@@ -14,10 +14,10 @@
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <a href=""><h2>Accueil</h2></a>
+            <a href="/"><h2>Accueil</h2></a>
             <hr>
             <ul>
-                <li><a href="">Données</a></li>
+                <li><a href="/">Données</a></li>
                 <li><a href="a_propos">À propos</a></li>
                 <li><a href="statistique">Statistique</a></li>
                 <li><a href="historique">Historique</a></li>
