--- a/templates/statistique.html
+++ b/templates/statistique.html
@@ -15,11 +15,11 @@
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <a href=""><h2>Accueil</h2>
+            <a href="/"><h2>Accueil</h2>
             </a>
             <hr>
             <ul>
-                <li><a href="">Données</a></li>
+                <li><a href="/">Données</a></li>
                 <li><a href="a_propos">À propos</a></li>
                 <li><a href="statistique">Statistique</a></li>
                 <li><a href="historique">Historique</a></li>
@@ -40,10 +40,6 @@
 
             <div class="card" id="graphique_pluie">
                 <img src="/static/graph_temperatures.png" alt="Graphique Temperature" style="max-width: 100%; height: auto;" class="graphique">
-            </div>
-
-            <div class="card" id="graphique_temperature">
-                <img src="/static/graph_pluie.png" alt="Graphique Pluie" style="max-width: 100%; height: auto;" class="graphique">
             </div>
 
             <div class="card" id="graphique_temps">
