--- a/templates/historique.html
+++ b/templates/historique.html
@@ -14,12 +14,12 @@
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <a href=""><h2>Accueil</h2></a>
+            <a href="/"><h2>Accueil</h2></a>
             <hr>
             <ul>
-                <li><a href="">Données</a></li>
+                <li><a href="/">Données</a></li>
                 <li><a href="a_propos">À propos</a></li>
-                <li><a href="a_propos">Statistique</a></li>
+                <li><a href="statistique">Statistique</a></li>
                 <li><a href="historique">Historique</a></li>
             </ul>
             <hr>
@@ -35,29 +35,32 @@
         <section id="historique" class="card">
             <h1>Historique</h1>
             <div class="history-card">
-                <table class="history-table">
+                <table id="history-table">
                     <thead>
                         <tr>
                             <th>Date</th>
-                            <th>Heure</th>
                             <th>Température</th>
                             <th>Humidité (%)</th>
                             <th>Pression (hPa)</th>
+                            <th>Temps</th>
                         </tr>
                     </thead>
                     <tbody id="history-body">
                         <tr>
-                            <th>12.01.2026</th>
-                            <th>08:00</th>
-                            <th>-4 °C</th>
-                            <th>12 %</th>
-                            <th>1015 hPa</th>
+                            <th>01.01.2000</th>
+                            <th>0 °C</th>
+                            <th>0 %</th>
+                            <th>0 hPa</th>
+                            <th>☀️</th>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </section>
     </div>
+
+    <script src="/static/historique.js"></script>
+
 </body>
 
 </html>
