--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Station météo -  à propos</title>
+    <title>Weather station - About</title>
+    <link rel="icon" type="image/x-icon" href="/static/icone.png">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <a href="/"><h2>Accueil</h2></a>
+            <a href="/"><h2>Home</h2></a>
             <hr>
             <ul>
-                <li><a href="/">Données</a></li>
-                <li><a href="a_propos">À propos</a></li>
-                <li><a href="statistique">Statistique</a></li>
-                <li><a href="historique">Historique</a></li>
+                <li><a href="/">datas</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="statistical">statistical</a></li>
+                <li><a href="history">history</a></li>
             </ul>
             <hr>
             <ul>
@@ -32,29 +33,25 @@
         </div>
     </nav>
     <div>
-        <h1>À propos</h1>
+        <h1>ABOUT</h1>
 
         <div class="content">
 
                     <div class="card">
-                        <h2>📌 Présentation</h2>
+                        <h2>📌 Presentation</h2>
                         <div class="card-content">
-                            <p>
-                                Ce projet consiste à realiser une station météorologique connectée.
-                                Les données sont mesurées par des capteurs, envoyées à une Raspberry Pi,
-                                puis affichées sur cette interface web.
-                            </p>
+                            <p>This project involves creating a connected weather station.
+                                Data is measured by sensors, sent to a Raspberry Pi,
+                                and then displayed on this web interface.</p>
                         </div>
                     </div>
 
                     <div class="card">
-                        <h2>⚙️ Fonctionnement</h2>
+                        <h2>⚙️ Functioning</h2>
                         <div class="card-content">
-                            <p>
-                                L'ESP32 lit les capteurs et transmet les mesures via Wifi.
-                                La Raspberry Pi reçoit les données et les met à disposition via une API,
-                                afin que le site web puisse les afficher en temps réel.
-                            </p>
+                            <p>The ESP32 reads the sensors and transmits the measurements via Wi-Fi.
+                                The Raspberry Pi receives the data and makes it available via an API,
+                                so that the website can display it in real time.</p>
                         </div>
                     </div>
 
@@ -62,9 +59,9 @@
                         <h2>🧪 Technologies</h2>
                         <div class="card-content">
                             <ul>
-                                <li>ESP32 + capteurs météo</li>
-                                <li>Wifi (réseau local)</li>
-                                <li>Raspberry Pi (seveur / API)</li>
+                                <li>ESP32 + weather sensor</li>
+                                <li>Wifi (local Network)</li>
+                                <li>Raspberry Pi (sever / API)</li>
                                 <li>HTML / CSS / JavaScript</li>
                             </ul>
 
@@ -72,11 +69,9 @@
                     </div>
 
                     <div class="card">
-                        <h2>👥 Travail en groupe</h2>
+                        <h2>👥 Group work</h2>
                         <div class="card-content">
-                            <p>
-                                Le projet est réalisé en groupe avec une répartition des tâches.
-                            </p>
+                            <p>The project is carried out in a group with a division of tasks.</p>
                         </div>
                     </div>
         </div>
