--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Station météo - Dashboard</title>
+    <title>Weather station - Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/static/icone.png">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <a href="/"><h2>Accueil</h2></a>
+            <a href="/"><h2>Home</h2></a>
             <hr>
             <ul>
-                <li><a href="/">Données</a></li>
-                <li><a href="a_propos">À propos</a></li>
-                <li><a href="statistique">Statistique</a></li>
-                <li><a href="historique">Historique</a></li>
+                <li><a href="/">Datas</a></li>
+                <li><a href="about">about</a></li>
+                <li><a href="statistical">statistical</a></li>
+                <li><a href="history">history</a></li>
             </ul>
             <hr>
             <ul>
@@ -35,25 +36,46 @@
         <h1>DASHBOARD</h1>
 
         <div class="content">
+            <div class="sensors" id="sensor1">
 
-            <div class="donnee">
-                <h2>Température :</h2>
-                <p id="temperature">X °C</p>
+                <h1>Sensor 1</h1>
+
+                <div class="donnee">
+                    <h2>Temperature :</h2>
+                    <p id="temperature1">X °C</p>
+                </div>
+
+                <div class="donnee">
+                    <h2>Pressure :</h2>
+                    <p id="pressure1">X hPa</p>
+                </div>
+
+                <div class="donnee">
+                    <h2>Humidity level :</h2>
+                    <p id="humidity1">X %</p>
+                </div>
+
             </div>
 
-            <div class="donnee">
-                <h2>Pression :</h2>
-                <p id="pression">X hPa</p>
-            </div>
+            <div class="sensors" id="sensor2">
 
-            <div class="donnee">
-                <h2>Taux d'humidité :</h2>
-                <p id="humidite">X %</p>
-            </div>
+                <h1>Sensor 2</h1>
 
-            <div class="donnee">
-                <h2>Temps :</h2>
-                <p id="temps">X</p>
+                <div class="donnee">
+                    <h2>Temperature :</h2>
+                    <p id="temperature2">X °C</p>
+                </div>
+
+                <div class="donnee">
+                    <h2>Pressure :</h2>
+                    <p id="pressure2">X hPa</p>
+                </div>
+
+                <div class="donnee">
+                    <h2>Humidity level :</h2>
+                    <p id="humidity2">X %</p>
+                </div>
+
             </div>
 
         </div>
@@ -62,7 +84,7 @@
 
 
 
-    <script src="/static/donnee.js"></script>
+    <script src="/static/js/donnee.js"></script>
 
 </body>
 
