correction de la side bar : elle ne fait plus toute la hauteur en mode mobile.

--- a/static/style.css
+++ b/static/style.css
@@ -117,6 +117,7 @@ canvas {
         text-align: center;
         align-content: center;
         height: auto;
+        min-height: auto;
     }
 
     nav .logo {
