--- a/templates/index.html
+++ b/templates/index.html
@@ -40,17 +40,17 @@
 
                 <h1>Sensor 1</h1>
 
-                <div class="donnee">
+                <div class="data">
                     <h2>Temperature :</h2>
                     <p id="temperature1">X °C</p>
                 </div>
 
-                <div class="donnee">
+                <div class="data">
                     <h2>Pressure :</h2>
                     <p id="pressure1">X hPa</p>
                 </div>
 
-                <div class="donnee">
+                <div class="data">
                     <h2>Humidity level :</h2>
                     <p id="humidity1">X %</p>
                 </div>
@@ -61,17 +61,17 @@
 
                 <h1>Sensor 2</h1>
 
-                <div class="donnee">
+                <div class="data">
                     <h2>Temperature :</h2>
                     <p id="temperature2">X °C</p>
                 </div>
 
-                <div class="donnee">
+                <div class="data">
                     <h2>Pressure :</h2>
                     <p id="pressure2">X hPa</p>
                 </div>
 
-                <div class="donnee">
+                <div class="data">
                     <h2>Humidity level :</h2>
                     <p id="humidity2">X %</p>
                 </div>
@@ -84,7 +84,7 @@
 
 
 
-    <script src="/static/js/donnee.js"></script>
+    <script src="/static/js/data.js"></script>
 
 </body>
 
