--- a/templates/statistical.html
+++ b/templates/statistical.html
@@ -37,44 +37,23 @@
         <h1>STATISTICAL</h1>
 
         <div class="content">
-            <div class="sensors" id="sensor1">
+            <div class="sensors">
 
-                <h1>Sensor 1</h1>
+                <h1>Sensor</h1>
 
                 <div class="card" id="graphique_pluie">
-                    <img src="/static/graph_temperature1.png" alt="Graphique Temperature sensor1"
+                    <img src="/static/graph_Temperatures.png" alt="Graphique Temperature"
                         style="max-width: 100%; height: auto;" class="graphique">
                 </div>
                 
 
                 <div class="card" id="graphique_pression">
-                    <img src="/static/graph_pressure1.png" alt="Graphique Pression sensor1"
+                    <img src="/static/graph_Pressures.png" alt="Graphique Pressure"
                         style="max-width: 100%; height: auto;" class="graphique">
                 </div>
 
                 <div class="card" id="graphique_humidite">
-                    <img src="/static/graph_humidity1.png" alt="Graphique Humidité sensor1"
-                        style="max-width: 100%; height: auto;" class="graphique">
-                </div>
-            </div>
-
-            <div class="sensors" id="sensor2">
-
-                <h1>Sensor 2</h1>
-
-                <div class="card" id="graphique_pluie">
-                    <img src="/static/graph_temperature2.png" alt="Graphique Temperature sensor2"
-                        style="max-width: 100%; height: auto;" class="graphique">
-                </div>
-                
-
-                <div class="card" id="graphique_pression">
-                    <img src="/static/graph_pressure2.png" alt="Graphique Pression sensor2"
-                        style="max-width: 100%; height: auto;" class="graphique">
-                </div>
-
-                <div class="card" id="graphique_humidite">
-                    <img src="/static/graph_humidity2.png" alt="Graphique Humidité sensor2"
+                    <img src="/static/graph_Humidity levels.png" alt="Graphique Humidité"
                         style="max-width: 100%; height: auto;" class="graphique">
                 </div>
             </div>
