--- a/templates/index.html
+++ b/templates/index.html
@@ -42,17 +42,17 @@
 
                 <div class="data">
                     <h2>Temperature :</h2>
-                    <p id="temperature1">X °C</p>
+                    <p id="temperature1">? °C</p>
                 </div>
 
                 <div class="data">
                     <h2>Pressure :</h2>
-                    <p id="pressure1">X hPa</p>
+                    <p id="pressure1">? hPa</p>
                 </div>
 
                 <div class="data">
                     <h2>Humidity level :</h2>
-                    <p id="humidity1">X %</p>
+                    <p id="humidity1">? %</p>
                 </div>
 
             </div>
@@ -63,17 +63,17 @@
 
                 <div class="data">
                     <h2>Temperature :</h2>
-                    <p id="temperature2">X °C</p>
+                    <p id="temperature2">? °C</p>
                 </div>
 
                 <div class="data">
                     <h2>Pressure :</h2>
-                    <p id="pressure2">X hPa</p>
+                    <p id="pressure2">? hPa</p>
                 </div>
 
                 <div class="data">
                     <h2>Humidity level :</h2>
-                    <p id="humidity2">X %</p>
+                    <p id="humidity2">? %</p>
                 </div>
 
             </div>
