Il se peut que le code soit incorecct, push de fin de journée.

--- a/templates/history.html
+++ b/templates/history.html
@@ -60,6 +60,7 @@
                     <thead>
                         <tr>
                             <th>Date</th>
+                            <th>Hour</th>
                             <th>Temperature</th>
                             <th>Humidity (%)</th>
                             <th>Pressure (hPa)</th>
