--- a/templates/statistical.html
+++ b/templates/statistical.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/static/icone.png">
 </head>
 
-<body>
+<body onload="">
     <!--side bar-->
     <nav>
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
@@ -68,7 +68,7 @@
 
 
 
-
+<script src="/static/js/statistical.js"></script>
 </body>
 
 </html>
