teste de connection avec les esp réussi, version fonctionnel

--- a/static/style.css
+++ b/static/style.css
@@ -138,8 +138,10 @@ canvas {
         width: auto;
     }
     .card{
-        width: 100%;
+        padding : auto;
     }
+    .graphique
+    { width: 100%;}
 
 }
 
