--- a/templates/index.html
+++ b/templates/index.html
@@ -42,9 +42,54 @@
                 <p>Chargement des capteurs...</p>
             </div>
         </div>
+
+        <div id="summary-container" class="summary-container">
+            <div class="summary-box" id="summary1">
+                <div class="date-center">
+                    <span>Date: <span id="date1">-</span></span>
+                </div>
+                <div class="row">
+                    <span>Température</span>
+                    <span>Max: <span id="temp-max1">-</span>°C</span>
+                    <span>Min: <span id="temp-min1">-</span>°C</span>
+                </div>
+                <div class="row">
+                    <span>Humidité</span>
+                    <span>Max: <span id="hum-max1">-</span>%</span>
+                    <span>Min: <span id="hum-min1">-</span>%</span>
+                </div>
+                <div class="row">
+                    <span>Pression</span>
+                    <span>Max: <span id="press-max1">-</span>hPa</span>
+                    <span>Min: <span id="press-min1">-</span>hPa</span>
+                </div>
+            </div>
+
+        <div class="summary-box" id="summary2">
+            <div class="date-center">
+                <span>Date: <span id="date2">-</span></span>
+            </div>
+            <div class="row">
+                <span>Température</span>
+                <span>Max: <span id="temp-max2">-</span>°C</span>
+                <span>Min: <span id="temp-min2">-</span>°C</span>
+            </div>
+            <div class="row">
+                <span>Humidité</span>
+                <span>Max: <span id="hum-max2">-</span>%</span>
+                <span>Min: <span id="hum-min2">-</span>%</span>
+            </div>
+            <div class="row">
+                <span>Pression</span>
+                <span>Max: <span id="press-max2">-</span>hPa</span>
+                <span>Min: <span id="press-min2">-</span>hPa</span>
+            </div>
+        </div>
+
     </div>
 
-
+    </div>
+    </div>
 
     <script src="/static/js/data.js"></script>
 
