ajout de la doc à Amin et j'ai mis les fichiers dédié au serveur web dans le fichier /app

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -23,18 +23,14 @@ nav .logo {
 nav {
     margin-right: 10px;
     padding: 10px;
-    width: 15%;
+    width: 15vw;
     background-color: #272727;
     flex-direction: row;
     min-height: calc(100vh - 20px);
     border-radius: 0px 10px 10px 0px;
 }
 
-nav link {
-    display: flex;
-    flex-direction: column;
-
-}
+ 
 
 nav li a {
     color: inherit;
@@ -68,6 +64,16 @@ nav li a:hover {
     font-weight:bold;
 }
 
+nav footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    color: white;
+    text-align: left;
+    margin-left: 10px;
+    width: 15vw;
+    margin-bottom: 10px;
+}
 .content {
     padding: 10px;
     flex-wrap: wrap;
@@ -133,6 +139,10 @@ canvas {
         border-radius: 50%;
         padding: 10px;
         justify-self: center;
+    }
+    nav footer{
+        position: relative;
+        width: 100%;
     }
     canvas{
         width: auto;
