--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -13,7 +13,7 @@
     <!--side bar-->
     <nav>
         <img src="static/icone.png" alt="icone" id="logo" class="logo">
-        <div class="link">
+        <header>
             <hr>
             <a href="/admin"><h2>Admin</h2></a>
             <hr>
@@ -29,7 +29,11 @@
                 <li><a href="https://cpnv.ch">Cpnv</a></li>
             </ul>
             <hr>
-        </div>
+        </header>
+        <footer>
+            <hr>
+            <li><a href="/admin">Admin panel</a></li>
+        </footer>
     </nav>
 
     <div class="admin-container">
