--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -13,7 +13,7 @@
     <!--side bar-->
     <nav>
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
-        <div class="link">
+        <header>
             <hr>
             <a href="/"><h2>Home</h2></a>
             <hr>
@@ -30,7 +30,11 @@
                 <li><a href="https://trello.com/b/mbKZJSjJ/station-m%C3%A9t%C3%A9o-esp32-rpi">Trello</a></li>
             </ul>
             <hr>
-        </div>
+        </header>
+        <footer>
+            <hr>
+            <li><a href="/admin">admin panel</a></li>
+        </footer>
     </nav>
     <div>
         <h1>HISTORY</h1>
