--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
     <!--side bar-->
     <nav>
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
-        <div class="link">
+        <header>
             <hr>
             <a href="/"><h2>Home</h2></a>
             <hr>
@@ -22,7 +22,6 @@
                 <li><a href="about">about</a></li>
                 <li><a href="statistical">statistical</a></li>
                 <li><a href="history">history</a></li>
-                <li><a href="admin">Admin ESP32</a></li>
             </ul>
             <hr>
             <ul>
@@ -30,8 +29,11 @@
                 <li><a href="https://cpnv.ch">Cpnv</a></li>
                 <li><a href="https://trello.com/b/mbKZJSjJ/station-m%C3%A9t%C3%A9o-esp32-rpi">Trello</a></li>
             </ul>
+        </header>
+        <footer>
             <hr>
-        </div>
+            <li><a href="/admin">admin panel</a></li>
+        </footer>
     </nav>
     <div>
         <h1>DASHBOARD</h1>
