--- a/app/static/style.css
+++ b/app/static/style.css
@@ -23,7 +23,7 @@ nav .logo {
 nav {
     margin-right: 10px;
     padding: 10px;
-    width: 15vw;
+    min-width: 15vw;
     background-color: #272727;
     flex-direction: row;
     min-height: calc(100vh - 20px);
@@ -71,7 +71,8 @@ nav footer{
     color: white;
     text-align: left;
     margin-left: 10px;
-    width: 15vw;
+    max-width: 15vw;
+    min-width: 15vw;
     margin-bottom: 10px;
 }
 .content {
@@ -143,6 +144,7 @@ canvas {
     nav footer{
         position: relative;
         width: 100%;
+        text-align: center;
     }
     canvas{
         width: auto;
