ajout des résumé journalier dans l'historique

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,9 @@
         <img src="static\icone.png" alt="icone" id="logo" class="logo">
         <header>
             <hr>
-            <a href="/"><h2>Home</h2></a>
+            <a href="/">
+                <h2>Home</h2>
+            </a>
             <hr>
             <ul>
                 <li><a href="/">Datas</a></li>
@@ -67,28 +69,28 @@
                 </div>
             </div>
 
-        <div class="summary-box" id="summary2">
-            <div class="date-center">
-                <span>Date: <span id="date2">-</span></span>
+            <div class="summary-box" id="summary2">
+                <div class="date-center">
+                    <span>Date: <span id="date2">-</span></span>
+                </div>
+                <div class="row">
+                    <span>Température</span>
+                    <span>Max: <span id="temp-max2">-</span>°C</span>
+                    <span>Min: <span id="temp-min2">-</span>°C</span>
+                </div>
+                <div class="row">
+                    <span>Humidité</span>
+                    <span>Max: <span id="hum-max2">-</span>%</span>
+                    <span>Min: <span id="hum-min2">-</span>%</span>
+                </div>
+                <div class="row">
+                    <span>Pression</span>
+                    <span>Max: <span id="press-max2">-</span>hPa</span>
+                    <span>Min: <span id="press-min2">-</span>hPa</span>
+                </div>
             </div>
-            <div class="row">
-                <span>Température</span>
-                <span>Max: <span id="temp-max2">-</span>°C</span>
-                <span>Min: <span id="temp-min2">-</span>°C</span>
-            </div>
-            <div class="row">
-                <span>Humidité</span>
-                <span>Max: <span id="hum-max2">-</span>%</span>
-                <span>Min: <span id="hum-min2">-</span>%</span>
-            </div>
-            <div class="row">
-                <span>Pression</span>
-                <span>Max: <span id="press-max2">-</span>hPa</span>
-                <span>Min: <span id="press-min2">-</span>hPa</span>
-            </div>
-        </div>
 
-    </div>
+        </div>
 
     </div>
     </div>
